deployments/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-learning
  labels:
    app: k8s-learning
    environment: local
